Tweaks for the unique external id test